--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -13,37 +13,7 @@
 
 
 <div class="messages">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        Masa
-      </div>
-      <div class="message-date">
-        2020/8/30(Wed) 12:43:30
-      </div>
-    </div>  
-    <div class="lower-message">
-      <div class="message-content">
-        お疲れ！
-      </div> 
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        Sim
-      </div>
-      <div class="message-date">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        こんばんは
-      </div>
-    </div>
-  </div>    
+  <%= render partial: 'message', collection: @messages %> 
 </div>
 
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
