--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -2,13 +2,13 @@
   display: flex;
 }
 
-.side-ber{
+.side-bar{
   background-color: #253141;
   height: 100vh;
   width: 300px;
 }
 
-.side-ber-header{
+.side-bar-header{
   background-color: #253141;
   height: 100px;
   padding: 0 20px;
@@ -24,7 +24,7 @@
 }
 
 .create-room{
-  font: 10px;
+  font-size: 10px;
 }
 
 .create-room a{
