--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -11,6 +11,7 @@
     <div class="message-content">
       <%= message.content%>
     </div>
+    <%= image_tag message.image.varint(resize: '500×500'), class: 'message-image' if message.image.attached? %>
   </div>
 </div>
     
